--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "db:status": "node scripts/db-status.js"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.33.7",
+    "@clerk/nextjs": "^5.0.0",
     "@prisma/client": "^6.17.1",
     "@splidejs/react-splide": "^0.7.12",
     "@tippyjs/react": "^4.2.6",
-    "@types/node": "20.1.2",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/react-responsive-masonry": "^2.1.0",
     "@types/scroll-lock": "^2.1.0",
     "autoprefixer": "^10.4.14",
     "classnames": "^2.3.2",
-    "eslint": "8.40.0",
+    "eslint": "^8.40.0",
     "eslint-config-next": "^15.5.6",
     "next": "^15.5.6",
     "postcss": "^8.4.23",
@@ -37,7 +37,7 @@
     "resend": "^6.2.2",
     "scroll-lock": "^2.1.5",
     "tailwindcss": "^3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "^5.1.0"
   },
   "devDependencies": {
     "tsx": "^4.20.6"
