--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env*.local.backup
+.env*.local.backup*
 .env
 dev.db
 prisma/dev.db
@@ -41,3 +43,6 @@ next-env.d.ts
 /.clerk/
 
 /lib/generated/prisma
+
+# Uploaded files
+/public/uploads/
