--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint",
     "db:seed": "tsx prisma/seed.ts",
     "db:reset": "npx prisma db push --force-reset && npm run db:seed",
-    "db:status": "node scripts/db-status.js"
+    "db:status": "node scripts/db-status.js",
+    "google-token": "node scripts/generate-google-token.js"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.0.0",
+    "@clerk/nextjs": "^6.34.0",
     "@prisma/client": "^6.17.1",
     "@splidejs/react-splide": "^0.7.12",
+    "@stripe/stripe-js": "^8.1.0",
     "@tippyjs/react": "^4.2.6",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
@@ -25,6 +27,7 @@
     "classnames": "^2.3.2",
     "eslint": "^8.40.0",
     "eslint-config-next": "^15.5.6",
+    "googleapis": "^164.1.0",
     "next": "^15.5.6",
     "postcss": "^8.4.23",
     "prisma": "^6.17.1",
@@ -36,6 +39,7 @@
     "react-scroll-into-view": "^1.12.1",
     "resend": "^6.2.2",
     "scroll-lock": "^2.1.5",
+    "stripe": "^19.1.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.0"
   },
