--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@stripe/stripe-js": "^8.1.0",
     "@tippyjs/react": "^4.2.6",
     "@types/node": "^20.0.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "@types/react-responsive-masonry": "^2.1.0",
     "@types/scroll-lock": "^2.1.0",
     "autoprefixer": "^10.4.14",
