--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.34.0",
     "@prisma/client": "^6.17.1",
+    "@react-pdf/renderer": "^4.3.1",
     "@splidejs/react-splide": "^0.7.12",
     "@stripe/stripe-js": "^8.1.0",
     "@tippyjs/react": "^4.2.6",
