--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,12 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["iad1"]
+  "regions": ["iad1"],
+  "crons": [
+    {
+      "path": "/api/cron/ai-policy-followup",
+      "schedule": "0 10 * * *"
+    }
+  ]
 }
 
