--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-next": "^15.5.7",
     "googleapis": "^164.1.0",
     "next": "^15.5.7",
+    "openai": "^6.10.0",
     "postcss": "^8.4.23",
     "prisma": "^6.17.1",
     "react": "^19.2.1",
