--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
+    "build:vercel": "prisma generate && node scripts/setup-db.js && next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
