--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.2.0",
     "@types/react-responsive-masonry": "^2.1.0",
     "@types/scroll-lock": "^2.1.0",
+    "@types/xml2js": "^0.4.14",
     "autoprefixer": "^10.4.14",
     "classnames": "^2.3.2",
     "eslint": "^8.40.0",
@@ -37,7 +38,8 @@
     "resend": "^6.2.2",
     "scroll-lock": "^2.1.5",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.0"
+    "typescript": "^5.1.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "tsx": "^4.20.6"
