Add PDF generation and automated follow-up emails for AI Preparedness Assessment
- Add PDF generator for Preparedness Report with branding
- Update Results component to require button click before PDF generation
- Fix flow: email capture → button click → PDF generation → download
- Add personalized follow-up email generator based on assessment responses
- Create cron job for automated emails 2 business days later at 10am
- Update database schema to include pdfUrl in PreparednessReportJob
- Add cron job to vercel.json for scheduled follow-ups
- Email encourages booking consultation to learn about custom coaching packages

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
     {
       "path": "/api/cron/ai-policy-followup",
       "schedule": "0 10 * * *"
+    },
+    {
+      "path": "/api/cron/ai-preparedness-followup",
+      "schedule": "0 10 * * *"
     }
   ]
 }
