--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.34.0",
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
     "@prisma/client": "^6.17.1",
     "@react-pdf/renderer": "^4.3.1",
     "@splidejs/react-splide": "^0.7.12",
