--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-responsive-masonry": "^2.1.0",
     "@types/scroll-lock": "^2.1.0",
     "@types/xml2js": "^0.4.14",
+    "@vercel/blob": "^2.0.0",
     "autoprefixer": "^10.4.14",
     "classnames": "^2.3.2",
     "eslint": "^8.40.0",
